// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> Should render correctly with no properties 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="Dialog"
  isOpen={false}
  portalClassName="dialog-portal-container"
>
  <div
    className="Dialog__content"
  />
</Blueprint3.Dialog>
`;

exports[`<Dialog /> Should render correctly with properties 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="Dialog my-dialog"
  isOpen={false}
  portalClassName="dialog-portal-container"
>
  <div
    className="Dialog__content"
  />
</Blueprint3.Dialog>
`;
